# customs-commercial-automation

./: .gitignore  AGENTS.md  PLANS.md  README.md  export_lc_sc.example.toml  main.py  pyproject.toml  workflow.example.toml
customs_automation/: __init__.py  cli.py
docs/: architecture.md  discrepancy-codes.md  domain-rules.md  prompt.md  release-notes.md  report-schemas.md  storage-layout.md  ud-ip-exp-implementation-handoff.md  ud-ip-exp-payload-manifest-example.json  workflows.md
project/: __init__.py  __main__.py  cli.py  config.py  exceptions.py
rules/: registry.toml
scripts/: benchmark_ud_ip_exp_matching.py  erp_download_debug.py  run_bb_dashboard_verification_live_cycle.cmd  run_bb_dashboard_verification_live_cycle.ps1  run_export_lc_sc_live_cycle.cmd  run_import_btb_lc_current_live.cmd  run_import_btb_lc_file_picker_live.cmd  run_import_btb_lc_live_cycle.ps1  run_live_cycle.ps1  run_ud_ip_exp_live_cycle.cmd
tests/: test_bb_dashboard_verification.py  test_canonicalization.py  test_cli.py  test_config.py  test_console.py  test_dashboard_export.py  test_dashboard_html_export.py  test_document_analysis.py  test_document_saving.py  test_document_verification.py  test_duplicate_handling.py  test_erp.py  test_export_document_classification.py  test_export_lc_sc_staging.py  test_export_parsing.py  test_hashing.py  test_import_btb_lc_extraction.py  test_import_btb_lc_workflow.py  test_intake.py  test_live_readiness.py  test_live_smoke_test.py  test_mail_move_marker_reporting.py  test_mail_moves.py  test_operator_queue.py  test_orchestrator.py  test_outlook_moves.py  (+53 more)
(+139 files in other folders)
